--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.2.2",
+    "@redux-devtools/extension": "^3.3.0",
+    "axios": "^1.7.7",
+    "immer": "^10.1.1",
+    "normalizr": "^3.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-redux": "^9.1.2",
+    "react-router": "^6.26.1",
     "react-router-dom": "^6.6.1",
-    "redux": "^4.2.0",
-    "reselect": "^4.1.7"
+    "redux": "^4.2.1",
+    "redux-saga": "^1.3.0",
+    "reselect": "^4.1.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
